1.6.11: 
 * Rewrote the way that the toolbar is implemented, laying the groundwork for
   themes in a subsequent release.
 * Changed some of the "+" buttons to be more descriptive: "+ notebook" and
   "+ quick link".
 * Fixed a Firefox bug in which removing some bold text and then typing new
   text would make the new text bold. Now, if you completely remove some bold
   text (rather than just a portion of it), any new text that you type will be
   unformatted.
 * Fixed a bug in which toolbar buttons didn't depress based on the current
   location of the text cursor.

1.6.10: March 20, 2009
 * Faster uploads and downloads for users of luminotes.com.
 * Luminotes Server improvements:
   * Fixed a bug in examples/luminotes_debian_initscript that prevented the
     "stop" command from working properly.
   * Added support for using the nginx web server with Luminotes. See the
     INSTALL file for more information.
 * Fixed a problem in which copying and pasting text containing newlines
   caused the pasted newlines to appear as spaces.

1.6.9: March 16, 2009
 * Added a remove formatting feature to the tools menu. This allows you to
   strip out all formatting from the currently selected text.
 * Luminotes discussion forums now change the discussion thread link color
   based on whether there are any new posts since you last visited the
   thread. This makes it much easier to keep up with a particular discussion.
 * Fixed a bug in which the filename of an exported HTML file was just
   "export" instead of being based on the notebook name.

1.6.8: March 3, 2009
 * You can now print your entire notebook. Just click the "print" link on the
   left side of the page.
 * You can now print an individual note. Just click the "tools" tab on a note
   and then "print this note".
 * Changed the order of exported HTML and CSV notebooks so that after all the
   "startup" notes are included, the remaining notes are included in